--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -26,9 +26,12 @@
 
         <div class="g-grid-col">
             <h1>  HIẾU ĐÌNH </h1>
+            <p>Game là một thế giới đa dạng và phong phú, nơi ta có thể trải nghiệm cuộc sống ảo, khám phá những thế giới mới, và thách thức bản thân. Đồng thời, game còn mang lại niềm vui, kỷ niệm và tạo nên những mối quan hệ đáng quý qua cộng đồng game thủ.
+                
+                </p>
         </div>
 
-        <div class="g-grid-col ">
+        <div class="loginform">  <div class="g-grid-col ">
             <div class="form">
                 <form>
                     <br>
@@ -50,8 +53,13 @@
                     <button type="button" class="regis">register</button>
                 </form>
             </div>
-        </div>
+        </div></div>
+      
 
+    </div?>
+
+
+    <div>
 
 
     </div>
