--- a/frontend/register/register.html
+++ b/frontend/register/register.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register Page</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+<html>
+  <head>
+    <title>Registration Page</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1>Register</h1>
-        <form action="#">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-
-            <label for="confirm-password">Confirm Password:</label>
-            <input type="password" id="confirm-password" name="confirm-password" required>
-
-            <button type="submit">Register</button>
+      <div class="register-form">
+        <h2>Register</h2>
+        <form>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required /><br /><br />
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required /><br /><br />
+          <label for="password">Password:</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            required
+          /><br /><br />
+          <label for="confirm-password">Confirm Password:</label>
+          <input
+            type="password"
+            id="confirm-password"
+            name="confirm-password"
+            required
+          /><br /><br />
+          <input type="submit" value="Register" />
         </form>
+      </div>
+      <div class="images">
+        <h1>Thien Ngoc</h1>
+        <p>
+          Game là một thế giới đa dạng và phong phú, nơi ta có thể trải nghiệm
+          cuộc sống ảo, khám phá những thế giới mới, và thách thức bản thân.
+          Đồng thời, game còn mang lại niềm vui, kỷ niệm và tạo nên những mối
+          quan hệ đáng quý qua cộng đồng game thủ.
+        </p>
+        <img src="https://genk.mediacdn.vn/139269124445442048/2022/7/28/tmb-1658998970448906989995.jpg" alt="Image 3" />
+      </div>
     </div>
-</body>
+  </body>
 </html>
